--- a/Style/index.css
+++ b/Style/index.css
@@ -201,7 +201,7 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  text-align: right;
+  /*text-align: right;*/
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
@@ -213,30 +213,24 @@ p {
   text-align: center;
 }
 
-@media (max-width: 1023px) {
-  .backgroundHeader .textHeader {
-    text-align: center;
-  }
-}
-
-.backgroundHeader .textHeader .navigationToggle {
+.backgroundHeader .navigationToggle {
   display: none;
 }
 
 @media (max-width: 1023px) {
-  .backgroundHeader .textHeader .navigationToggle {
+  .backgroundHeader .navigationToggle {
     display: inline;
   }
 }
 
-.backgroundHeader .textHeader button {
+.backgroundHeader button {
   display: none;
+  width: 35px;
 }
 
 @media (max-width: 1023px) {
-  .backgroundHeader .textHeader button {
+  .backgroundHeader button {
     display: inline;
-    width: 30px;
     background-color: transparent;
     border-color: transparent;
     margin-top: 3%;
@@ -245,88 +239,90 @@ p {
     display: block;
     float: left;
   }
+  .backgroundHeader button img {
+    width: 90%;
+  }
 }
 
-.backgroundHeader .textHeader #mobileMenu {
+.backgroundHeader #mobileMenu {
   display: none;
   cursor: pointer;
 }
 
 @media (max-width: 1023px) {
-  .backgroundHeader .textHeader #mobileMenu {
+  .backgroundHeader #mobileMenu {
     display: block;
   }
 }
 
-.backgroundHeader .textHeader #closeMenu {
+.backgroundHeader #closeMenu {
   display: none;
   cursor: pointer;
 }
 
-.backgroundHeader .textHeader h1 {
-  margin-top: 14%;
-  margin-bottom: 1%;
+.backgroundHeader .headerText {
+  margin-top: 12%;
+  margin-left: 20px;
+  margin-right: 0px;
+}
+
+@media (max-width: 765px) {
+  .backgroundHeader .headerText {
+    margin-top: 0%;
+  }
+}
+
+.backgroundHeader .headerText h1 {
+  position: absolute;
   font-size: 4.5rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #dcfeff;
 }
 
-@media (max-width: 1023px) {
-  .backgroundHeader .textHeader h1 {
-    margin-top: 7%;
-  }
-}
-
 @media (max-width: 765px) {
-  .backgroundHeader .textHeader h1 {
+  .backgroundHeader .headerText h1 {
+    position: static;
     font-size: 2rem;
     margin-top: 1%;
   }
 }
 
-.backgroundHeader .textHeader h2 {
+.backgroundHeader .headerText h2 {
+  position: absolute;
+  margin-top: 7%;
   font-size: 2rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   color: #dcfeff;
-  margin-top: 0.3%;
 }
 
 @media (max-width: 1023px) {
-  .backgroundHeader .textHeader h2 {
+  .backgroundHeader .headerText h2 {
     font-size: 1.5rem;
-    margin-top: 0%;
   }
 }
 
 @media (max-width: 765px) {
-  .backgroundHeader .textHeader h2 {
+  .backgroundHeader .headerText h2 {
+    position: static;
+    margin-top: 1%;
     font-size: 1.5rem;
     margin-bottom: 0.5%;
   }
 }
 
 .backgroundHeader .ourMenusImage {
-  position: block;
-  margin-left: -40%;
+  display: inline;
+  float: right;
   width: 100%;
 }
 
-@media (max-width: 765px) {
-  .backgroundHeader .ourMenusImage {
-    margin-top: 0%;
-    margin-left: 0%;
-  }
-}
-
-.backgroundHeader img {
-  position: static;
+.backgroundHeader .headerImage {
   width: 60%;
-  height: auto;
   float: right;
 }
 
 @media (max-width: 765px) {
-  .backgroundHeader img {
+  .backgroundHeader .headerImage {
     margin-top: -15%;
     float: none;
     width: 100%;
