--- a/Style/index.scss
+++ b/Style/index.scss
@@ -102,6 +102,7 @@ p {
   display: none;
   @media (max-width: $tablet) {
     position: absolute;
+    z-index: 1;
     background-color: blue;
     padding: 5%;
     width: 100%;
@@ -116,7 +117,7 @@ p {
           }
 
           h2 {
-            color: black;
+            color: $navText;
           }
         }
       }
@@ -159,6 +160,7 @@ p {
   @include row();
   /*text-align: right;*/
   justify-content: right;
+
   background-image: linear-gradient(black, rgb(21, 143, 243));
   .textHeader {
     text-align: center;
@@ -194,6 +196,7 @@ p {
     }
   }
   #closeMenu {
+    z-index: 2;
     display: none;
     cursor: pointer;
   }
@@ -210,6 +213,8 @@ p {
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
       color: $navText;
+      @media (max-width: $tablet) {
+      }
       @media (max-width: $mobile) {
         position: static;
         font-size: 2rem;
