--- a/Style/index.css
+++ b/Style/index.css
@@ -18,7 +18,7 @@ p {
 
 .firstNavigation {
   position: absolute;
-  margin-right: 35%;
+  margin-right: 30%;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -112,12 +112,14 @@ p {
 
 @media (max-width: 1023px) {
   #mobileNavigation {
-    position: absolute;
+    position: fixed;
+    text-align: center;
     z-index: 1;
-    background-color: blue;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
+    background-image: linear-gradient(black, #158ff3);
     padding: 5%;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
   #mobileNavigation nav ul li {
     list-style-type: none;
@@ -202,16 +204,11 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  /*text-align: right;*/
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
   background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
   background-image: linear-gradient(black, #158ff3);
-}
-
-.backgroundHeader .textHeader {
-  text-align: center;
 }
 
 .backgroundHeader .navigationToggle {
@@ -259,13 +256,12 @@ p {
 .backgroundHeader #closeMenu {
   z-index: 2;
   display: none;
+  position: fixed;
   cursor: pointer;
 }
 
 .backgroundHeader .headerText {
   margin-top: 12%;
-  margin-left: 20px;
-  margin-right: 0px;
 }
 
 @media (max-width: 765px) {
@@ -277,6 +273,7 @@ p {
 .backgroundHeader .headerText h1 {
   position: absolute;
   font-size: 4.5rem;
+  left: 6%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #dcfeff;
 }
@@ -284,6 +281,7 @@ p {
 @media (max-width: 765px) {
   .backgroundHeader .headerText h1 {
     position: static;
+    text-align: center;
     font-size: 2rem;
     margin-top: 1%;
   }
@@ -292,6 +290,7 @@ p {
 .backgroundHeader .headerText h2 {
   position: absolute;
   margin-top: 7%;
+  left: 6%;
   font-size: 2rem;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   color: #dcfeff;
@@ -307,6 +306,7 @@ p {
   .backgroundHeader .headerText h2 {
     position: static;
     margin-top: 1%;
+    text-align: center;
     font-size: 1.5rem;
     margin-bottom: 0.5%;
   }
