--- a/Style/index.scss
+++ b/Style/index.scss
@@ -53,7 +53,7 @@ p {
     display: none;
   }
   position: absolute;
-  margin-right: 35%;
+  margin-right: 30%;
   width: fit-content;
   padding: 3%;
   nav {
@@ -101,12 +101,14 @@ p {
 #mobileNavigation {
   display: none;
   @media (max-width: $tablet) {
-    position: absolute;
+    position: fixed;
+    text-align: center;
     z-index: 1;
-    background-color: blue;
+    background-image: linear-gradient(black, rgb(21, 143, 243));
     padding: 5%;
     width: 100%;
-    height: auto;
+    height: 100%;
+
     nav {
       ul {
         li {
@@ -158,13 +160,9 @@ p {
 
 .backgroundHeader {
   @include row();
-  /*text-align: right;*/
   justify-content: right;
-
   background-image: linear-gradient(black, rgb(21, 143, 243));
-  .textHeader {
-    text-align: center;
-  }
+
   .navigationToggle {
     display: none;
     @media (max-width: $tablet) {
@@ -198,18 +196,18 @@ p {
   #closeMenu {
     z-index: 2;
     display: none;
+    position: fixed;
     cursor: pointer;
   }
   .headerText {
     margin-top: 12%;
-    margin-left: 20px;
-    margin-right: 0px;
     @media (max-width: $mobile) {
       margin-top: 0%;
     }
     h1 {
       position: absolute;
       font-size: 4.5rem;
+      left: 6%;
       font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
         sans-serif;
       color: $navText;
@@ -217,6 +215,7 @@ p {
       }
       @media (max-width: $mobile) {
         position: static;
+        text-align: center;
         font-size: 2rem;
         margin-top: 1%;
       }
@@ -224,6 +223,7 @@ p {
     h2 {
       position: absolute;
       margin-top: 7%;
+      left: 6%;
       font-size: 2rem;
       font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
@@ -235,6 +235,7 @@ p {
       @media (max-width: $mobile) {
         position: static;
         margin-top: 1%;
+        text-align: center;
         font-size: 1.5rem;
         margin-bottom: 0.5%;
       }
