--- a/Style/index.scss
+++ b/Style/index.scss
@@ -102,24 +102,25 @@ p {
   display: none;
   @media (max-width: $tablet) {
     position: fixed;
-    text-align: center;
     z-index: 1;
     background-image: linear-gradient(black, rgb(21, 143, 243));
-    padding: 5%;
+
     width: 100%;
     height: 100%;
-
     nav {
       ul {
+        margin-top: 150px;
         li {
           list-style-type: none;
-          margin-top: 10%;
+          margin-top: 40px;
+          margin-left: 90px;
           a {
             text-decoration: none;
           }
 
           h2 {
             color: $navText;
+            text-align: left;
           }
         }
       }
@@ -176,13 +177,13 @@ p {
       display: inline;
       background-color: transparent;
       border-color: transparent;
-      margin-top: 3%;
-      margin-left: 3%;
+      margin-top: 20px;
+      margin-left: 20px;
       position: absolute;
       display: block;
       float: left;
       img {
-        width: 90%;
+        width: 30px;
       }
     }
   }
@@ -194,9 +195,9 @@ p {
     }
   }
   #closeMenu {
+    position: fixed;
     z-index: 2;
     display: none;
-    position: fixed;
     cursor: pointer;
   }
   .headerText {
