--- a/Style/index.css
+++ b/Style/index.css
@@ -113,23 +113,26 @@ p {
 @media (max-width: 1023px) {
   #mobileNavigation {
     position: fixed;
-    text-align: center;
     z-index: 1;
     background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
     background-image: linear-gradient(black, #158ff3);
-    padding: 5%;
     width: 100%;
     height: 100%;
   }
+  #mobileNavigation nav ul {
+    margin-top: 150px;
+  }
   #mobileNavigation nav ul li {
     list-style-type: none;
-    margin-top: 10%;
+    margin-top: 40px;
+    margin-left: 90px;
   }
   #mobileNavigation nav ul li a {
     text-decoration: none;
   }
   #mobileNavigation nav ul li h2 {
     color: #dcfeff;
+    text-align: left;
   }
 }
 
@@ -231,14 +234,14 @@ p {
     display: inline;
     background-color: transparent;
     border-color: transparent;
-    margin-top: 3%;
-    margin-left: 3%;
+    margin-top: 20px;
+    margin-left: 20px;
     position: absolute;
     display: block;
     float: left;
   }
   .backgroundHeader button img {
-    width: 90%;
+    width: 30px;
   }
 }
 
@@ -254,9 +257,9 @@ p {
 }
 
 .backgroundHeader #closeMenu {
+  position: fixed;
   z-index: 2;
   display: none;
-  position: fixed;
   cursor: pointer;
 }
 
