--- a/Style/index.css
+++ b/Style/index.css
@@ -127,8 +127,13 @@ p {
 
 #mobileNavigation nav ul li {
   list-style-type: none;
-  margin-top: 40px;
-  margin-left: 90px;
+}
+
+@media (max-width: 1023px) {
+  #mobileNavigation nav ul li {
+    margin-top: 40px;
+    margin-left: 90px;
+  }
 }
 
 #mobileNavigation nav ul li a {
@@ -238,18 +243,15 @@ p {
 
 .backgroundHeader button {
   display: none;
-  width: 35px;
 }
 
 @media (max-width: 1023px) {
   .backgroundHeader button {
-    display: inline;
+    position: absolute;
     background-color: transparent;
     border-color: transparent;
     margin-top: 20px;
     margin-left: 20px;
-    position: absolute;
-    display: block;
     float: left;
   }
   .backgroundHeader button img {
