--- a/Style/index.scss
+++ b/Style/index.scss
@@ -112,8 +112,10 @@ p {
       margin-top: 150px;
       li {
         list-style-type: none;
-        margin-top: 40px;
-        margin-left: 90px;
+        @media (max-width: $tablet) {
+          margin-top: 40px;
+          margin-left: 90px;
+        }
         a {
           display: none;
           @media (max-width: $tablet) {
@@ -175,15 +177,12 @@ p {
   }
   button {
     display: none;
-    width: 35px;
     @media (max-width: $tablet) {
-      display: inline;
+      position: absolute;
       background-color: transparent;
       border-color: transparent;
       margin-top: 20px;
       margin-left: 20px;
-      position: absolute;
-      display: block;
       float: left;
       img {
         width: 30px;
