--- a/Style/index.scss
+++ b/Style/index.scss
@@ -9,6 +9,12 @@ $mobile: 765px;
 }
 
 @mixin text1 {
+  h1 {
+    margin-top: 4rem;
+    color: rgb(94, 14, 14);
+    font-size: 4rem;
+    margin-bottom: 5rem;
+  }
   h2 {
     color: rgb(94, 14, 14);
     font-size: 3rem;
@@ -266,9 +272,9 @@ p {
 .backgroundBody {
   width: 100%;
   height: fit-content;
+  @include text1();
   .oneRow {
-    text-align: center;
-    @include text1();
+    text-align: left;
     background-color: $backgroundText;
     width: 80%;
     margin-top: 7%;
@@ -294,43 +300,6 @@ p {
         margin-left: 0;
         margin-bottom: 10%;
       }
-    }
-    h2 {
-      text-align: left;
-      font-size: 3rem;
-      @media (max-width: $mobile) {
-        font-size: 2rem;
-      }
-    }
-    .iconsWrapper {
-      @include row();
-      justify-content: center;
-      margin-bottom: 5%;
-      .iconContainer {
-        margin-right: 5%;
-        margin-left: 5%;
-        text-align: center;
-
-        button {
-          cursor: pointer;
-          background-color: transparent;
-          border-color: transparent;
-          .icon {
-            width: 90px;
-            text-align: center;
-            padding: 20%;
-          }
-          p {
-            justify-content: center;
-          }
-        }
-      }
-    }
-    #myDropdownDrink {
-      display: inline;
-    }
-    #myDropdownFood {
-      display: none;
     }
   }
 
@@ -372,6 +341,56 @@ p {
         img {
           margin: 0 auto;
           width: 50%;
+        }
+      }
+    }
+  }
+  .menuRow {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    padding: 3%;
+    margin-top: 7%;
+    background-color: $backgroundText;
+    .iconsWrapper {
+      @include row();
+      justify-content: center;
+      margin-bottom: 5%;
+      .iconContainer {
+        margin-right: 5%;
+        margin-left: 5%;
+        text-align: center;
+        button {
+          cursor: pointer;
+          background-color: transparent;
+          border-color: transparent;
+          .icon {
+            width: 90px;
+            text-align: center;
+            padding: 20%;
+          }
+          p {
+            justify-content: center;
+          }
+        }
+      }
+    }
+    #myDropdownDrink {
+      display: inline;
+    }
+    #myDropdownFood {
+      display: none;
+    }
+    .productWrapper {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      .productContainer {
+        margin-left: 10%;
+        text-align: center;
+        .menuImg {
+          width: 200px;
         }
       }
     }
